<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/trinn_chooser">
        <item
            android:id="@+id/grade_1"
            android:title="@string/first_grade" />
        <item
            android:id="@+id/grade_2"
            android:title="@string/second_grade" />
        <item
            android:id="@+id/grade_3"
            android:title="@string/third_grade" />
        <item
            android:id="@+id/grade_4"
            android:title="@string/forth_grade" />
        <item
            android:id="@+id/grade_5"
            android:title="@string/fifth_grade" />
        <item
            android:id="@+id/grade_6"
            android:title="@string/sixth_grade" />
        <item
            android:id="@+id/grade_7"
            android:title="@string/seventh_grade" />
        <item
            android:id="@+id/grade_8"
            android:title="@string/eight_grade" />
        <item
            android:id="@+id/grade_9"
            android:title="@string/ninth_grade" />
        <item
            android:id="@+id/grade_10"
            android:title="@string/tenth_grade" />
    </group>

    <group android:id="@+id/more">
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/about" />
    </group>

</menu>